# obsidian-scribe

./: .env.example  .gitignore  ARCHITECTURE.md  AUDIO_CHUNKING.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CONFIG_SCHEMA.md  LICENSE  Makefile  PROJECT_ROADMAP.md  PROJECT_STRUCTURE.md  README.md  RESTRUCTURING_PROGRESS.md  TECHNICAL_DECISIONS.md  WHISPER_INTEGRATION.md  config.example.yaml  obsidian_scribe.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_diagnostic.py  test_diarization_simple.py  test_hf_diagnostic.py  test_hf_token.py  test_progress_tracking.py  test_run.py  test_token_debug.py
.claude/: settings.local.json
dev-tools/: README.md  test_optional_diarization.py
dev-tools/legacy/: README.md  test_clear_processing.py  test_file_detection.py  test_pipeline.py
docs/: API_REFERENCE.md  ARCHITECTURE_OVERVIEW.md  CONFIGURATION.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  INSTALLATION.md  PROGRESS_TRACKING.md  README.md  RESTRUCTURING_PROGRESS.md  TROUBLESHOOTING.md  USAGE.md  WEBM_DETECTION_FIX.md
docs/project/: PROJECT_ROADMAP.md  PROJECT_STRUCTURE.md
docs/technical/: VOICEMEETER_SETUP.md
examples/: README.md
obsidian_scribe/: __init__.py  file_watcher.py  processor.py  utils.py
src/: __init__.py  main.py
src/audio/: processor.py
src/config/: __init__.py  defaults.py  manager.py  schema.py
src/storage/: __init__.py  archive.py  cache.py  file_manager.py  state_manager.py
src/transcript/: __init__.py  formatter.py  generator.py  markdown_writer.py  templates.py
src/utils/: __init__.py  exceptions.py  helpers.py  logger.py  validators.py
src/watcher/: __init__.py  event_handler.py  file_watcher.py  queue_manager.py
tests/: TEST_PLAN.md  __init__.py  conftest.py  test_config.py  test_utils.py
