[metadata]
name = obsidian-scribe
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = Automated audio transcription tool with speaker diarization for Obsidian
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/obsidian-scribe
project_urls =
    Bug Tracker = https://github.com/yourusername/obsidian-scribe/issues
    Documentation = https://obsidian-scribe.readthedocs.io
    Source Code = https://github.com/yourusername/obsidian-scribe
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    Topic :: Multimedia :: Sound/Audio :: Speech
    Topic :: Text Processing :: Linguistic
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    watchdog>=3.0.0
    pyyaml>=6.0
    requests>=2.31.0
    pydub>=0.25.1
    openai>=1.0.0
    pyannote.audio>=3.0.0
    torch>=2.0.0
    torchaudio>=2.0.0
    ffmpeg-python>=0.2.0
    python-dotenv>=1.0.0
    click>=8.1.0
    rich>=13.0.0
    jinja2>=3.1.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-asyncio>=0.20.0
    black>=22.0.0
    flake8>=5.0.0
    mypy>=0.990
    pre-commit>=2.20.0
    pip-tools>=6.0.0
docs =
    sphinx>=5.0.0
    sphinx-rtd-theme>=1.0.0
    sphinx-autodoc-typehints>=1.19.0
    myst-parser>=0.18.0

[options.entry_points]
console_scripts =
    obsidian-scribe = obsidian_scribe.main:main
    obs-scribe = obsidian_scribe.main:main

[options.package_data]
obsidian_scribe =
    templates/*.j2
    templates/*.md

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    venv,
    .tox,
    .mypy_cache,
    .pytest_cache,
    .coverage,
    htmlcov,
    docs

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = False
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True
ignore_missing_imports = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    -ra
    --strict-markers
    --cov=src
    --cov-branch
    --cov-report=term-missing:skip-covered
    --cov-report=html
    --cov-report=xml
    --cov-fail-under=80

[coverage:run]
source = src
omit =
    */tests/*
    */test_*
    */__init__.py
    */setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 100
skip_gitignore = True